--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,11 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss",
+              "node_modules/ngx-spinner/animations/ball-scale-ripple-multiple.css",
+              "node_modules/ngx-spinner/animations/ball-scale-ripple.css"],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
@@ -97,7 +101,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "styles": [],
+            "styles": ["node_modules/ngx-spinner/animations/ball-scale-ripple-multiple.css"],
             "scripts": [],
             "assets": [
               {
