--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,12 @@
     {
       "files": ["*.html"],
       "extends": ["plugin:@angular-eslint/template/recommended"],
-      "rules": {}
+      "rules": {
+        "arrow-body-style": [
+          "error",
+          "never"
+        ]
+      }
     }
   ]
 }
